tests/NormalTests/paczka1/fuzzy1/41568464.err
Error in line 1: drVBbP5 A210 0,4
Error in line 4: bbTx A210 88,2
Error in line 25: XPCI A210 5,9
Error in line 27: XPCI A177 80,0
Error in line 29: xr3ugmWe1C S958 48,4
Error in line 33: xr3ugmWe1C A210 49,8
